--- a/!style_minified.css
+++ b/!style_minified.css
@@ -52,17 +52,14 @@ a {
     --text-grey:  #C4C4C4;
     --bg-footer: #393939;
 
-    --row-text-size             : 48px;
-    --titleContainer-text-size  : 48px;
-    --contactCard-text-size     : 36px;
-    --slideTitle-text-size      : 36px;
-    --skillText-title-size      : 36px;
-    --nav-text-size             : 26px;
+    --nav-text-size: 26px;
+    --presentation-text-size: 24px;
+    --row-text-size: 72px;
+    --titleContainer-text-size: 48px;
+    --contactCard-text-size: 36px;
+    --copyright-text-size: 16px;
+    --slideTitle-text-size: 36px;
     --slideDescription-text-size: 24px;
-    --presentation-text-size    : 24px;
-    --skillText-subtitle-size   : 18px;
-    --copyright-text-size       : 18px;
-    
 }
 
 .w-100 {
@@ -77,6 +74,13 @@ a {
 
 .paddingLeft-8 {
     padding-left: 8%;
+}
+
+.paddingRight-4 {
+    padding-right: 4%;
+}
+.paddingLeft-4 {
+    padding-left: 4%;
 }
 
 .paddingRight-5 {
@@ -297,8 +301,8 @@ nav {
 .skills {
     display: grid;
     grid-template-columns: auto auto auto;
-    row-gap: 90px;
-    column-gap: 90px;
+    row-gap: 11.93vh;
+    column-gap: 11.93vh;
 }
 
 .skill {
@@ -320,6 +324,9 @@ nav {
     width: 100%;
     height: 100%;
     border-radius: inherit;
+    display: flex;
+    justify-content: center;
+    align-content: center;
     flex-direction: column;
     background: rgba(0, 0, 0, 0.85);
     color: var(--text-color);
@@ -351,12 +358,40 @@ nav {
 
 .skillText p:first-child {
     font-weight: bold;
+    font-size: 36px;
     padding-bottom: 10%;
 }
 
 .skillText p:last-child {
     font-weight: 500;
+    font-size: 18px;
 }
+
+
+
+/* MARK: TODO HOBBY SECTION */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -425,135 +460,142 @@ footer .titleContainer p {
 
 
 
+
+
+
+
+@media only screen and (max-width: 900px) {
+    .skills {
+        display: flex;
+        flex-direction: column;
+    }
+    
+
+}
+
+@media only screen and (max-width: 900px) {
+
+    #presentazione div:last-child {
+        flex-direction: column;
+    }
+
+    #presentazione div div:first-child {
+        order: 1;
+    }
+
+    #presentazione div div:last-child {
+        order: 2;
+    }
+
+}
+
+
+
 /* MARK: MEDIA QUERY FOR TEXT SIZE - 15%  */
 
 /* Extra Small */
 
 @media only screen and (max-width: 300px) {
     nav {
-        font-size: 15.9px;
+        font-size: var(--nav-text-size);
     }
 
     .presentationText {
-        font-size: 14.7px;
+        font-size: var(--presentation-text-size);
     }
 
     .rowText {
-        font-size: 28.2px;
+        font-size: var(--row-text-size);
     }
 
     .titleContainer p {
-        font-size: 28.2px;
+        font-size: var(--titleContainer-text-size);
     }
 
     .contactCard p {
-        font-size: 22.1px;
+        font-size: var(--contactCard-text-size);
     }
 
     .copyrightText {
-        font-size: 11px; 
-    }
-    
-    .slideTitle {
-        font-size: 22.1px;
+        font-size: var(--copyright-text-size); 
     }
 
-    .slideDescription {
-        font-size: 14.7px;
+    .slideTitle{
+        font-size: var(--slideTitle-text-size);
     }
 
-    .skillText:first-child {
-        font-size: 22.1px;
-    }
-
-    .skillText:last-child {
-        font-size: 11px;
+    .slideDescription{
+        font-size: var(--slideDescription-text-size);
     }
 }
 
 /* Small */
 @media only screen and (max-width: 600px) {
     nav {
-        font-size: 18.8;
+        font-size: var(--nav-text-size);
     }
 
     .presentationText {
-        font-size: 17.3px;
+        font-size: var(--presentation-text-size);
     }
 
     .rowText {
-        font-size: 33.2px;
+        font-size: var(--row-text-size);
     }
 
     .titleContainer p {
-        font-size: 33.2px;
+        font-size: var(--titleContainer-text-size);
     }
 
     .contactCard p {
-        font-size: 26px;
+        font-size: var(--contactCard-text-size);
     }
 
     .copyrightText {
-        font-size: 13px; 
-    }
-    
-    .slideTitle {
-        font-size: 26px;
+        font-size: var(--copyright-text-size); 
     }
 
-    .slideDescription {
-        font-size: 17.3px;
+    .slideTitle{
+        font-size: var(--slideTitle-text-size);
     }
 
-    .skillText:first-child {
-        font-size: 26px;
-    }
-
-    .skillText:last-child {
-        font-size: 13px;
+    .slideDescription{
+        font-size: var(--slideDescription-text-size);
     }
 }
 
 /* Medium */
 @media only screen and (max-width: 900px) {
     nav {
-        font-size: 22.1px;
+        font-size: var(--nav-text-size);
     }
 
     .presentationText {
-        font-size: 20.4px;
+        font-size: var(--presentation-text-size);
     }
 
     .rowText {
-        font-size: 39.1px;
+        font-size: var(--row-text-size);
     }
 
     .titleContainer p {
-        font-size: 39.1px;
+        font-size: var(--titleContainer-text-size);
     }
 
     .contactCard p {
-        font-size: 30.6px;
+        font-size: var(--contactCard-text-size);
     }
 
     .copyrightText {
-        font-size: 15.3px; 
+        font-size: var(--copyright-text-size); 
     }
     
-    .slideTitle {
-        font-size: 30.6px;
+    .slideTitle{
+        font-size: var(--slideTitle-text-size);
     }
 
-    .slideDescription {
-        font-size: 20.4px;
-    }
-
-    .skillText:first-child {
-        font-size: 30.6px;
-    }
-
-    .skillText:last-child {
-        font-size: 15.3px;
+    .slideDescription{
+        font-size: var(--slideDescription-text-size);
     }
 }
 
@@ -584,19 +626,11 @@ footer .titleContainer p {
         font-size: var(--copyright-text-size); 
     }
     
-    .slideTitle {
+    .slideTitle{
         font-size: var(--slideTitle-text-size);
     }
 
-    .slideDescription {
+    .slideDescription{
         font-size: var(--slideDescription-text-size);
-    }
-
-    .skillText:first-child {
-        font-size: var(--skillText-title-size);
-    }
-
-    .skillText:last-child {
-        font-size: var(--skillText-subtitle-size);
     }
 }
