--- a/!style_minified.css
+++ b/!style_minified.css
@@ -67,8 +67,8 @@ a {
 }
 
 .flex-center {
-    display: flex;
     align-items: center;
+    display: flex;
     justify-content: center;
 }
 
@@ -79,6 +79,7 @@ a {
 .paddingRight-4 {
     padding-right: 4%;
 }
+
 .paddingLeft-4 {
     padding-left: 4%;
 }
@@ -105,8 +106,8 @@ a {
 
 /* MARK: NAVIGATION BAR */
 nav {
-    display: flex;
     align-items: center;
+    display: flex;
     justify-content: space-evenly;
     position: fixed;
     top: 0;
@@ -115,13 +116,13 @@ nav {
 
 #linksContainer {
     display: flex;
-    justify-content: space-evenly;
     font-weight: bold;
+    justify-content: space-evenly;
 }
 
 #linksContainer a:hover {
-    color: var(--text-color);
     border-bottom: 1px solid black;
+    color: var(--text-color);
 }
 
 #linksContainer a:active{
@@ -138,8 +139,8 @@ nav {
 }
 
 #logoContainer img {
-    width: 100px;
     height: 100px;
+    width: 100px;
 }  
 
 #languageContainer {
@@ -147,8 +148,8 @@ nav {
 }
 
 #languageContainer img {
-    width: 70px;
     height: 70px;
+    width: 70px;
 }
 
 
@@ -174,34 +175,31 @@ nav {
 /* MARK: NAVIGATOR */
 
 #navigator {
+    background: none;
     position: fixed;
     right: 0;
     top: 30%;
-    background: none;
     z-index: 1000;
 }
 
 #navigator div {
-    display: flex;
-    justify-content: space-evenly;
-    flex-direction: column;
-    height: 300px;
-    padding: 20px;
-    
-    border-top: 1px solid black;
-    border-top-left-radius: 25%;
-
-    border-left: 1px solid black;
-
     border-bottom: 1px solid black;
     border-bottom-left-radius: 25%;
+    border-left: 1px solid black;
+    border-top: 1px solid black;
+    border-top-left-radius: 25%;
+    display: flex;
+    flex-direction: column;
+    height: 300px;
+    justify-content: space-evenly;
+    padding: 20px;
 }
 
 #navigator div a {
-    width: 40px;
-    height: 40px;
     border: 1px solid var(--text-color);
     border-radius: 50%;
+    height: 40px;
+    width: 40px;
 }
 
 #navigator div a:hover {
@@ -209,8 +207,8 @@ nav {
 }
 
 #navigator div img {
-    width: 100%;
     border-radius: 50%;
+    width: 100%;
 }
 
 
@@ -224,9 +222,9 @@ nav {
 }
 
 .titleContainer img {
-    width: 100px;
     height: 100px;
     margin-right: 2%;
+    width: 100px;
 }
 
 /* MARK: BLANK ROW */
@@ -243,8 +241,8 @@ nav {
 /* MARK: PRESENTAZIONE ROW */
 
 .presentationImage {
-    width: 400px;
     height: 600px;
+    width: 400px;
 }
 
 .presentationText {
@@ -254,24 +252,24 @@ nav {
 /* MARK: SLIDER */
 
 .slider {
-    width: 800px; /*Rapporto 16:9*/
-    height: 470px;
     border: 1px solid black;
-    display: flex;
-    overflow-x: auto;
-    -webkit-overflow-scrolling: touch;
-    scroll-snap-type: x mandatory;
-    scroll-behavior: smooth;
     border-top-right-radius: 10%;
     border-top-left-radius: 10%;
+    display: flex;
+    height: 470px;
     margin: 0 10%;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;
+    width: 800px; /*Rate 16:9*/
+    -webkit-overflow-scrolling: touch;
 }
 
 .slide {
     flex-shrink: 0;
-    width: 100%;
     height: 100%;
     position: relative;
+    width: 100%;
 }
 
 .slider > .slide {
@@ -279,20 +277,20 @@ nav {
 }
 
 .slide img {
+    height: 100%;
     pointer-events: none;
     width: 100%;
-    height: 100%;
 }
 
 .slide div {
+    left: 15%;
     position: absolute;
     top: 80%;
-    left: 15%;
 }
 
 .slideTextContainer p {
-    padding: 0;
     margin: 0;
+    padding: 0;
 }
 
 
@@ -300,49 +298,47 @@ nav {
 
 .skills {
     display: grid;
+    column-gap: 11.93vh;
     grid-template-columns: auto auto auto;
     row-gap: 11.93vh;
-    column-gap: 11.93vh;
 }
 
 .skill {
-    width: 200px;
-    height: 200px;
     border: #000000 solid 1px;
     border-radius: 25%;
+    height: 200px;
     position: relative;
+    width: 200px;
 }
+
 .skill img {
-    width: 100%;
     border-radius: inherit;
+    width: 100%;
 }
 
 .skillText {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border-radius: inherit;
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    flex-direction: column;
     background: rgba(0, 0, 0, 0.85);
     color: var(--text-color);
+    border-radius: inherit;
+    flex-direction: column;
+    height: 100%;
+    left: 0;
     opacity: 0;
+    position: absolute;
+    top: 0;
     transition: opacity 0.25s;
+    width: 100%;
 }
 
 
 .skillText > * {
-    transform: translateY(20px);
     transition: transform 0.25s;
+    transform: translateY(20px);
 }
 
-.skillText:hover{
-    opacity: 1;
+.skillText:hover {
     backdrop-filter: blur(5px);
+    opacity: 1;
 }
 
 .skillText:hover > * {
@@ -350,26 +346,25 @@ nav {
 }
 
 .skillText p {
-    text-align: center;
     background: none;
-    padding: 0;
     margin: 0;
+    padding: 0;
+    text-align: center;
 }
 
 .skillText p:first-child {
-    font-weight: bold;
     font-size: 36px;
+    font-weight: bold;
     padding-bottom: 10%;
 }
 
 .skillText p:last-child {
-    font-weight: 500;
     font-size: 18px;
+    font-weight: 500;
 }
 
 
 
-/* MARK: TODO HOBBY SECTION */
 
 
 
@@ -402,9 +397,9 @@ footer {
 }
 
 footer .titleContainer {
+    align-content: center;
     background-color: inherit;
     display: flex;
-    align-items: center;
     justify-content: flex-start;
     padding-left: 5%;
 }
@@ -414,43 +409,40 @@ footer .titleContainer p {
 }
 
 .copyrightText {
-    text-align: center;
     background-color: inherit;
-    padding: 0 0 1% 0;
     margin: 0;
+    padding: 0 0 1% 0;
+    text-align: center;
 }
 
 .contactCards {
+    background-color: inherit;
     display: flex;
     justify-content: space-evenly;
-    background-color: inherit;
 }
 
 .contactCard {
-    width: 200px;
-    height: 300px;
     background-color: transparent;
     display: flex;
     flex-direction: column;
+    height: 300px;
+    width: 200px;
 }
 
 .contactCard a {
     background: none;
-    display: flex;
-    align-content: center;
-    justify-content: center;
 }
 
 .contactCard img {
-    width: 80%;
-    border-radius: 50%;
     border: 1px solid black;
+    border-radius: 50%;
+    width: 80%;
 }
 
 .contactCard p {
     background-color: inherit;
-    text-align: center;
     padding-top: 5%;
+    text-align: center;
 }
 
 
