--- a/!style_minified.css
+++ b/!style_minified.css
@@ -23,27 +23,6 @@ body {
     padding: 0;
 }
 
-a {
-    color: var(--text-grey);
-    text-decoration: none;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /* MARK: Utils */
 
 :root {
@@ -62,9 +41,7 @@ a {
     --slideDescription-text-size: 24px;
 }
 
-.w-100 {
-    width: 100%;
-}
+.w-100 { width: 100%; }
 
 .flex-center {
     align-items: center;
@@ -72,39 +49,21 @@ a {
     justify-content: center;
 }
 
-.paddingLeft-8 {
-    padding-left: 8%;
-}
+.paddingBottom-2 { padding-bottom: 2%; }
 
-.paddingRight-4 {
-    padding-right: 4%;
-}
+.paddingLeft-4   { padding-left  : 4%; }
 
-.paddingLeft-4 {
-    padding-left: 4%;
-}
+.paddingLeft-8   { padding-left  : 8%; }
 
-.paddingRight-5 {
-    padding-right: 5%;
-}
+.paddingRight-4  { padding-right : 4%; }
 
-.paddingRight-8 {
-    padding-right: 8%;
-}
+.paddingRight-5  { padding-right : 5%; }
 
-.paddingBottom-2 {
-    padding-bottom: 2%;
-}
+.paddingRight-8  { padding-right : 8%; }
 
-.paddingTopBottom-2 {
-    padding: 2% 0;
-}
+.hidden { display: none !important; }
 
-.hidden {
-    display: none !important;
-}
-
-/* MARK: NAVIGATION BAR */
+/* MARK: NAVBAR */
 nav {
     align-items: center;
     display: flex;
@@ -114,66 +73,51 @@ nav {
     z-index: 1000;
 }
 
-#linksContainer {
-    display: flex;
-    font-weight: bold;
-    justify-content: space-evenly;
-}
+    #linksContainer {
+        display: flex;
+        font-weight: bold;
+        justify-content: space-evenly;
+    }
 
-#linksContainer a:hover {
-    border-bottom: 1px solid black;
-    color: var(--text-color);
-}
+        #linksContainer a {
+            color: var(--text-grey);
+            text-decoration: none;
+        }
 
-#linksContainer a:active{
-    color: var(--text-black)
-}.active {color: var(--text-black);} /* Da cancellare */
+        #linksContainer a:hover {
+            border-bottom: 1px solid black;
+            color: var(--text-color) !important;
+        }
 
-#logoContainer img, #languageContainer img {
-    border: 1px solid black;
-    border-radius: 50%;
-}
+        #linksContainer a:active{
+            color: var(--text-black)
+        }.active {color: var(--text-black) !important;} /* Da cancellare */
+    
+    #logoContainer {
+        padding-left: 50px;
+    }
 
-#logoContainer {
-    padding-left: 50px;
-}
+        #logoContainer img {
+            border: 1px solid black;
+            border-radius: 50%;
+            height: 100px;
+            width: 100px;
+        }  
 
-#logoContainer img {
-    height: 100px;
-    width: 100px;
-}  
+    #languageContainer {
+        padding-right: 50px;
+    }
 
-#languageContainer {
-    padding-right: 50px;
-}
-
-#languageContainer img {
-    height: 70px;
-    width: 70px;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+        #languageContainer img {
+            border: 1px solid black;
+            border-radius: 50%;
+            height: 70px;
+            width: 70px;
+        }
 
 
 
 /* MARK: NAVIGATOR */
-
 #navigator {
     background: none;
     position: fixed;
@@ -182,63 +126,63 @@ nav {
     z-index: 1000;
 }
 
-#navigator div {
-    border-bottom: 1px solid black;
-    border-bottom-left-radius: 25%;
-    border-left: 1px solid black;
-    border-top: 1px solid black;
-    border-top-left-radius: 25%;
-    display: flex;
-    flex-direction: column;
-    height: 300px;
-    justify-content: space-evenly;
-    padding: 20px;
-}
+    #navigator div {
+        border-bottom: 1px solid black;
+        border-bottom-left-radius: 25%;
+        border-left: 1px solid black;
+        border-top: 1px solid black;
+        border-top-left-radius: 25%;
+        display: flex;
+        flex-direction: column;
+        height: 300px;
+        justify-content: space-evenly;
+        padding: 20px;
+    }
 
-#navigator div a {
-    border: 1px solid var(--text-color);
-    border-radius: 50%;
-    height: 40px;
-    width: 40px;
-}
+        #navigator div a {
+            border: 1px solid var(--text-color);
+            border-radius: 50%;
+            height: 40px;
+            width: 40px;
+        }
 
-#navigator div a:hover {
-    border-color: var(--text-black);
-}
+        #navigator div a:hover {
+            border-color: var(--text-black);
+        }
 
-#navigator div img {
-    border-radius: 50%;
-    width: 100%;
-}
+        #navigator div img {
+            border-radius: 50%;
+            width: 100%;
+        }
 
 
-/* MARK: Content ROW */
-
+/* MARK: Custom ROW */
 .titleContainer {
     margin: 2% 0;   
-}
-.titleContainer p {
-    color: var(--text-color);
-}
 
-.titleContainer img {
-    height: 100px;
-    margin-right: 2%;
-    width: 100px;
 }
+    .titleContainer p {
+        color: var(--text-color);
+    }
 
-/* MARK: BLANK ROW */
+    .titleContainer img {
+        height: 100px;
+        margin-right: 2%;
+        width: 100px;
+    }
+
+/* MARK: ROW */
 .row {
     background-color: black;
 }
 
-.rowText {
-    background-color: inherit;
-    color: #FFF;
-    text-align: center;
-}
+    .rowText {
+        background-color: inherit;
+        color: #FFF;
+        text-align: center;
+    }
 
-/* MARK: PRESENTAZIONE ROW */
+/* MARK: PRESENTAZIONE */
 
 .presentationImage {
     height: 600px;
@@ -249,7 +193,7 @@ nav {
     line-height: 2.5;
 }
 
-/* MARK: SLIDER */
+/* MARK: SLIDER (PROGETTI & INTERESSI) */
 
 .slider {
     border: 1px solid black;
@@ -265,37 +209,36 @@ nav {
     -webkit-overflow-scrolling: touch;
 }
 
-.slide {
-    flex-shrink: 0;
-    height: 100%;
-    position: relative;
-    width: 100%;
-}
+    .slide {
+        flex-shrink: 0;
+        height: 100%;
+        position: relative;
+        width: 100%;
+    }
 
-.slider > .slide {
-    scroll-snap-align: start;
-}
+    .slider > .slide {
+        scroll-snap-align: start;
+    }
 
-.slide img {
-    height: 100%;
-    pointer-events: none;
-    width: 100%;
-}
+        .slide img {
+            height: 100%;
+            pointer-events: none;
+            width: 100%;
+        }
 
-.slide div {
-    left: 15%;
-    position: absolute;
-    top: 80%;
-}
+        .slide div {
+            left: 15%;
+            position: absolute;
+            top: 80%;
+        }
 
-.slideTextContainer p {
-    margin: 0;
-    padding: 0;
-}
+            .slideTextContainer p {
+                margin: 0;
+                padding: 0;
+            }
 
 
-/* MARK: SKILLS SECTION */
-
+/* MARK: SKILLS */
 .skills {
     display: grid;
     column-gap: 11.93vh;
@@ -303,92 +246,64 @@ nav {
     row-gap: 11.93vh;
 }
 
-.skill {
-    border: #000000 solid 1px;
-    border-radius: 25%;
-    height: 200px;
-    position: relative;
-    width: 200px;
-}
+    .skill {
+        border: #000000 solid 1px;
+        border-radius: 25%;
+        height: 200px;
+        position: relative;
+        width: 200px;
+    }
 
-.skill img {
-    border-radius: inherit;
-    width: 100%;
-}
+    .skill img {
+        border-radius: inherit;
+        width: 100%;
+    }
 
-.skillText {
-    background: rgba(0, 0, 0, 0.85);
-    color: var(--text-color);
-    border-radius: inherit;
-    flex-direction: column;
-    height: 100%;
-    left: 0;
-    opacity: 0;
-    position: absolute;
-    top: 0;
-    transition: opacity 0.25s;
-    width: 100%;
-}
+    .skillText {
+        background: rgba(0, 0, 0, 0.85);
+        color: var(--text-color);
+        border-radius: inherit;
+        flex-direction: column;
+        height: 100%;
+        left: 0;
+        opacity: 0;
+        position: absolute;
+        top: 0;
+        transition: opacity 0.25s;
+        width: 100%;
+    }
 
+        .skillText > * {
+            transition: transform 0.25s;
+            transform: translateY(20px);
+        }
 
-.skillText > * {
-    transition: transform 0.25s;
-    transform: translateY(20px);
-}
+        .skillText:hover {
+            backdrop-filter: blur(5px);
+            opacity: 1;
+        }
 
-.skillText:hover {
-    backdrop-filter: blur(5px);
-    opacity: 1;
-}
+        .skillText:hover > * {
+            transform: translateY(0);
+        }
 
-.skillText:hover > * {
-    transform: translateY(0);
-}
+        .skillText p {
+            background: none;
+            margin: 0;
+            padding: 0;
+            text-align: center;
+        }
 
-.skillText p {
-    background: none;
-    margin: 0;
-    padding: 0;
-    text-align: center;
-}
+        .skillText p:first-child {
+            font-size: 36px;
+            font-weight: bold;
+            padding-bottom: 10%;
+        }
 
-.skillText p:first-child {
-    font-size: 36px;
-    font-weight: bold;
-    padding-bottom: 10%;
-}
-
-.skillText p:last-child {
-    font-size: 18px;
-    font-weight: 500;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+        .skillText p:last-child {
+            font-size: 18px;
+            font-weight: 500;
+        }
 
 /* MARK: Footer */
 footer {
@@ -396,73 +311,62 @@ footer {
     color: var(--text-color);
 }
 
-footer .titleContainer {
-    align-content: center;
-    background-color: inherit;
-    display: flex;
-    justify-content: flex-start;
-    padding-left: 5%;
-}
+    footer .titleContainer {
+        align-content: center;
+        background-color: inherit;
+        display: flex;
+        justify-content: flex-start;
+        padding-left: 5%;
+    }
 
-footer .titleContainer p {
-    background-color: inherit;
-}
+        footer .titleContainer p {
+            background-color: inherit;
+        }
 
-.copyrightText {
-    background-color: inherit;
-    margin: 0;
-    padding: 0 0 1% 0;
-    text-align: center;
-}
+    .contactCards {
+        background-color: inherit;
+        display: flex;
+        justify-content: space-evenly;
+    }
 
-.contactCards {
-    background-color: inherit;
-    display: flex;
-    justify-content: space-evenly;
-}
+        .contactCard {
+            background-color: transparent;
+            display: flex;
+            flex-direction: column;
+            height: 300px;
+            width: 200px;
+        }
 
-.contactCard {
-    background-color: transparent;
-    display: flex;
-    flex-direction: column;
-    height: 300px;
-    width: 200px;
-}
+        .contactCard a {
+            background: none;
+        }
 
-.contactCard a {
-    background: none;
-}
+        .contactCard img {
+            border: 1px solid black;
+            border-radius: 50%;
+            width: 80%;
+        }
 
-.contactCard img {
-    border: 1px solid black;
-    border-radius: 50%;
-    width: 80%;
-}
+        .contactCard p {
+            background-color: inherit;
+            padding-top: 5%;
+            text-align: center;
+        }
 
-.contactCard p {
-    background-color: inherit;
-    padding-top: 5%;
-    text-align: center;
-}
-
-
+    .copyrightText {
+        background-color: inherit;
+        margin: 0;
+        padding: 0 0 1% 0;
+        text-align: center;
+    }
 
 
-
-
-
-
-
-
-
-
+/* Mobile positioning */
 @media only screen and (max-width: 900px) {
     .skills {
         display: flex;
         flex-direction: column;
     }
-    
-
 }
 
 @media only screen and (max-width: 900px) {
