--- a/!style_minified.css
+++ b/!style_minified.css
@@ -108,9 +108,10 @@ nav {
         padding-right: 50px;
     }
 
-        #languageContainer img {
+        #language {
             border: 1px solid black;
             border-radius: 50%;
+            cursor: pointer;
             height: 70px;
             width: 70px;
         }
