--- a/!style_minified.css
+++ b/!style_minified.css
@@ -522,6 +522,13 @@ footer {
     }
 }
 
+@media only screen and (max-width: 600px) {
+    .presentationImage {
+        height: 300px;
+        width: 200px;
+    }
+}
+
 @media only screen and (min-width: 901px) {
     #navigator div a {
         height: 40px;
