--- a/!style_minified.css
+++ b/!style_minified.css
@@ -23,6 +23,28 @@ body {
     padding: 0;
 }
 
+/* MARK: Lateral scrollbar */
+
+::-webkit-scrollbar {
+    width: 14px;
+    height: 14px;
+}
+
+::-webkit-scrollbar:horizontal {
+    width: 8px;
+    height: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #C4C4C4;
+    border-radius: 16px;
+    background: var(--text-color);
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+  }
+
 /* MARK: Utils */
 
 :root {
@@ -513,7 +535,7 @@ footer {
 
 
 
-/* Mobile positioning */
+/* MARK: Mobile positioning */
 
 @media only screen and (min-width: 426px) {
     #navigator div a {
@@ -576,4 +598,103 @@ footer {
         flex-direction: column;
     }
 
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* ICONS */
+
+
+
+/* Wrapper */
+.icon-button {
+	background-color: black; /* Change */
+	border-radius: 3.6rem;
+	cursor: pointer;
+	display: inline-block;
+	font-size: 2.0rem;
+	height: 3.6rem;
+	line-height: 3.6rem;
+	margin: 0 5px;
+	position: relative;
+	text-align: center;
+	-webkit-user-select: none;
+	   -moz-user-select: none;
+	    -ms-user-select: none;
+	        user-select: none;
+	width: 3.6rem;
+}
+
+/* Circle */
+.icon-button span {
+	border-radius: 0;
+	display: block;
+	height: 0;
+	left: 50%;
+	margin: 0;
+	position: absolute;
+	top: 50%;
+	-webkit-transition: all 0.3s;
+	   -moz-transition: all 0.3s;
+	     -o-transition: all 0.3s;
+	        transition: all 0.3s;
+	width: 0;
+}
+.icon-button:hover span {
+	width: 3.6rem;
+	height: 3.6rem;
+	border-radius: 3.6rem;
+	margin: -1.8rem;
+}
+.twitter span {
+	background-color: #4099ff;/* Change */
+}
+.facebook span {
+	background-color: #3B5998;/* Change */
+}
+.google-plus span {
+	background-color: #db5a3c;/* Change */
+}
+
+/* Icons */
+.icon-button i {
+	background: none;
+	color: white;/* Change */
+	height: 3.6rem;
+	left: 0;
+	line-height: 3.6rem;
+	position: absolute;
+	top: 0;
+	-webkit-transition: all 0.3s;
+	   -moz-transition: all 0.3s;
+	     -o-transition: all 0.3s;
+	        transition: all 0.3s;
+	width: 3.6rem;
+	z-index: 10;
+}
+.icon-button .icon-twitter {
+	color: #4099ff;/* Change */
+}
+.icon-button .icon-facebook {
+	color: #3B5998;/* Change */
+}
+.icon-button .icon-google-plus {
+	color: #db5a3c;/* Change */
+}
+.icon-button:hover .icon-twitter,
+.icon-button:hover .icon-facebook,
+.icon-button:hover .icon-google-plus {
+	color: white;/* Change */
 }
