--- a/!style_minified.css
+++ b/!style_minified.css
@@ -178,6 +178,21 @@ nav {
             width: 100%;
         }
 
+/* MARK: BACKTOTOP */
+
+#backToTop {
+    width: 50px;
+    height: 50px;
+    border-radius: 25%;
+    border: 1px solid black;
+    position: fixed;
+    bottom: 2%;
+    right: 5%;
+}
+
+#backToTop span {
+    font-size: 42px;
+}
 
 /* MARK: Custom ROW */
 .titleContainer {
