--- a/!style_minified.css
+++ b/!style_minified.css
@@ -371,30 +371,28 @@ footer {
             background-color: transparent;
             display: flex;
             flex-direction: column;
-            height: 300px;
-            width: 225px;
+            height: 150px;
+            width: 150px;
+            border-radius: 50%;
         }
 
         .contactCard a {
-            background: none;
+            background: grey;
+            height: inherit;
+            width: inherit;
+            border-radius: 50%;
         }
 
         .contactCard img {
-            border: 1px solid black;
+            border: 3px solid white;
             border-radius: 50%;
-            width: 80%;
-        }
-
-        .contactCard p {
-            background-color: inherit;
-            padding-top: 5%;
-            text-align: center;
+            width: 100%;
         }
 
     .copyrightText {
         background-color: inherit;
         margin: 0;
-        padding: 0 0 1% 0;
+        padding: 5% 0 1% 0;
         text-align: center;
     }
 
@@ -635,88 +633,3 @@ footer {
 
 
 
-
-/* ICONS */
-
-
-
-/* Wrapper */
-.icon-button {
-	background-color: black; /* Change */
-	border-radius: 3.6rem;
-	cursor: pointer;
-	display: inline-block;
-	font-size: 2.0rem;
-	height: 3.6rem;
-	line-height: 3.6rem;
-	margin: 0 5px;
-	position: relative;
-	text-align: center;
-	-webkit-user-select: none;
-	   -moz-user-select: none;
-	    -ms-user-select: none;
-	        user-select: none;
-	width: 3.6rem;
-}
-
-/* Circle */
-.icon-button span {
-	border-radius: 0;
-	display: block;
-	height: 0;
-	left: 50%;
-	margin: 0;
-	position: absolute;
-	top: 50%;
-	-webkit-transition: all 0.3s;
-	   -moz-transition: all 0.3s;
-	     -o-transition: all 0.3s;
-	        transition: all 0.3s;
-	width: 0;
-}
-.icon-button:hover span {
-	width: 3.6rem;
-	height: 3.6rem;
-	border-radius: 3.6rem;
-	margin: -1.8rem;
-}
-.twitter span {
-	background-color: #4099ff;/* Change */
-}
-.facebook span {
-	background-color: #3B5998;/* Change */
-}
-.google-plus span {
-	background-color: #db5a3c;/* Change */
-}
-
-/* Icons */
-.icon-button i {
-	background: none;
-	color: white;/* Change */
-	height: 3.6rem;
-	left: 0;
-	line-height: 3.6rem;
-	position: absolute;
-	top: 0;
-	-webkit-transition: all 0.3s;
-	   -moz-transition: all 0.3s;
-	     -o-transition: all 0.3s;
-	        transition: all 0.3s;
-	width: 3.6rem;
-	z-index: 10;
-}
-.icon-button .icon-twitter {
-	color: #4099ff;/* Change */
-}
-.icon-button .icon-facebook {
-	color: #3B5998;/* Change */
-}
-.icon-button .icon-google-plus {
-	color: #db5a3c;/* Change */
-}
-.icon-button:hover .icon-twitter,
-.icon-button:hover .icon-facebook,
-.icon-button:hover .icon-google-plus {
-	color: white;/* Change */
-}
