--- a/!style_minified.css
+++ b/!style_minified.css
@@ -99,6 +99,8 @@ nav {
         display: flex;
         font-weight: bold;
         justify-content: space-evenly;
+        align-items: center;
+        height: 2.5em;
     }
 
         #linksContainer a {
